MiniOOL/MiniOOL_parser.automaton
State 0:
prog' -> . prog [ # ]
-- On WHILE shift to state 1
-- On VAR shift to state 5
-- On SKIP shift to state 7
-- On PROC shift to state 2
-- On NUM shift to state 8
-- On NULL shift to state 9
-- On MINUS shift to state 10
-- On MALLOC shift to state 26
-- On LPAREN shift to state 11
-- On LBRACE shift to state 30
-- On IF shift to state 31
-- On IDENT shift to state 57
-- On ATOM shift to state 64
-- On prog shift to state 87
-- On expr shift to state 66
-- On cmds shift to state 88
-- On cmd shift to state 80
-- On EOL reduce production cmds -> 

State 1:
cmd -> WHILE . bool_expr cmd [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On PROC shift to state 2
-- On NUM shift to state 8
-- On NULL shift to state 9
-- On NOT shift to state 32
-- On MINUS shift to state 10
-- On LPAREN shift to state 33
-- On IDENT shift to state 12
-- On BOOL shift to state 34
-- On expr shift to state 51
-- On bool_expr shift to state 85

State 2:
expr -> PROC . IDENT COLON cmd [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On IDENT shift to state 3

State 3:
expr -> PROC IDENT . COLON cmd [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On COLON shift to state 4

State 4:
expr -> PROC IDENT COLON . cmd [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On WHILE shift to state 1
-- On VAR shift to state 5
-- On SKIP shift to state 7
-- On PROC shift to state 2
-- On NUM shift to state 8
-- On NULL shift to state 9
-- On MINUS shift to state 10
-- On MALLOC shift to state 26
-- On LPAREN shift to state 11
-- On LBRACE shift to state 30
-- On IF shift to state 31
-- On IDENT shift to state 57
-- On ATOM shift to state 64
-- On expr shift to state 66
-- On cmd shift to state 84

State 5:
cmd -> VAR . IDENT [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On IDENT shift to state 6

State 6:
cmd -> VAR IDENT . [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On WHILE reduce production cmd -> VAR IDENT 
-- On VAR reduce production cmd -> VAR IDENT 
-- On TIMES reduce production cmd -> VAR IDENT 
-- On SKIP reduce production cmd -> VAR IDENT 
-- On SEMICOLON reduce production cmd -> VAR IDENT 
-- On RPAREN reduce production cmd -> VAR IDENT 
-- On RBRACE reduce production cmd -> VAR IDENT 
-- On PROC reduce production cmd -> VAR IDENT 
-- On PLUS reduce production cmd -> VAR IDENT 
-- On PARALLEL reduce production cmd -> VAR IDENT 
-- On OR reduce production cmd -> VAR IDENT 
-- On NUM reduce production cmd -> VAR IDENT 
-- On NULL reduce production cmd -> VAR IDENT 
-- On MINUS reduce production cmd -> VAR IDENT 
-- On MALLOC reduce production cmd -> VAR IDENT 
-- On LPAREN reduce production cmd -> VAR IDENT 
-- On LBRACE reduce production cmd -> VAR IDENT 
-- On IS_NOT_EQUAL reduce production cmd -> VAR IDENT 
-- On IS_LESS_EQUAL reduce production cmd -> VAR IDENT 
-- On IS_LESS reduce production cmd -> VAR IDENT 
-- On IS_GREATER_EQUAL reduce production cmd -> VAR IDENT 
-- On IS_GREATER reduce production cmd -> VAR IDENT 
-- On IS_EQUAL reduce production cmd -> VAR IDENT 
-- On IF reduce production cmd -> VAR IDENT 
-- On IDENT reduce production cmd -> VAR IDENT 
-- On EOL reduce production cmd -> VAR IDENT 
-- On ELSE reduce production cmd -> VAR IDENT 
-- On DOT reduce production cmd -> VAR IDENT 
-- On DIV reduce production cmd -> VAR IDENT 
-- On ATOM reduce production cmd -> VAR IDENT 
-- On AND reduce production cmd -> VAR IDENT 

State 7:
cmd -> SKIP . [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On WHILE reduce production cmd -> SKIP 
-- On VAR reduce production cmd -> SKIP 
-- On TIMES reduce production cmd -> SKIP 
-- On SKIP reduce production cmd -> SKIP 
-- On SEMICOLON reduce production cmd -> SKIP 
-- On RPAREN reduce production cmd -> SKIP 
-- On RBRACE reduce production cmd -> SKIP 
-- On PROC reduce production cmd -> SKIP 
-- On PLUS reduce production cmd -> SKIP 
-- On PARALLEL reduce production cmd -> SKIP 
-- On OR reduce production cmd -> SKIP 
-- On NUM reduce production cmd -> SKIP 
-- On NULL reduce production cmd -> SKIP 
-- On MINUS reduce production cmd -> SKIP 
-- On MALLOC reduce production cmd -> SKIP 
-- On LPAREN reduce production cmd -> SKIP 
-- On LBRACE reduce production cmd -> SKIP 
-- On IS_NOT_EQUAL reduce production cmd -> SKIP 
-- On IS_LESS_EQUAL reduce production cmd -> SKIP 
-- On IS_LESS reduce production cmd -> SKIP 
-- On IS_GREATER_EQUAL reduce production cmd -> SKIP 
-- On IS_GREATER reduce production cmd -> SKIP 
-- On IS_EQUAL reduce production cmd -> SKIP 
-- On IF reduce production cmd -> SKIP 
-- On IDENT reduce production cmd -> SKIP 
-- On EOL reduce production cmd -> SKIP 
-- On ELSE reduce production cmd -> SKIP 
-- On DOT reduce production cmd -> SKIP 
-- On DIV reduce production cmd -> SKIP 
-- On ATOM reduce production cmd -> SKIP 
-- On AND reduce production cmd -> SKIP 

State 8:
expr -> NUM . [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On WHILE reduce production expr -> NUM 
-- On VAR reduce production expr -> NUM 
-- On TIMES reduce production expr -> NUM 
-- On SKIP reduce production expr -> NUM 
-- On SEMICOLON reduce production expr -> NUM 
-- On RPAREN reduce production expr -> NUM 
-- On RBRACE reduce production expr -> NUM 
-- On PROC reduce production expr -> NUM 
-- On PLUS reduce production expr -> NUM 
-- On PARALLEL reduce production expr -> NUM 
-- On OR reduce production expr -> NUM 
-- On NUM reduce production expr -> NUM 
-- On NULL reduce production expr -> NUM 
-- On MINUS reduce production expr -> NUM 
-- On MALLOC reduce production expr -> NUM 
-- On LPAREN reduce production expr -> NUM 
-- On LBRACE reduce production expr -> NUM 
-- On IS_NOT_EQUAL reduce production expr -> NUM 
-- On IS_LESS_EQUAL reduce production expr -> NUM 
-- On IS_LESS reduce production expr -> NUM 
-- On IS_GREATER_EQUAL reduce production expr -> NUM 
-- On IS_GREATER reduce production expr -> NUM 
-- On IS_EQUAL reduce production expr -> NUM 
-- On IF reduce production expr -> NUM 
-- On IDENT reduce production expr -> NUM 
-- On EOL reduce production expr -> NUM 
-- On ELSE reduce production expr -> NUM 
-- On DOT reduce production expr -> NUM 
-- On DIV reduce production expr -> NUM 
-- On ATOM reduce production expr -> NUM 
-- On AND reduce production expr -> NUM 

State 9:
expr -> NULL . [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On WHILE reduce production expr -> NULL 
-- On VAR reduce production expr -> NULL 
-- On TIMES reduce production expr -> NULL 
-- On SKIP reduce production expr -> NULL 
-- On SEMICOLON reduce production expr -> NULL 
-- On RPAREN reduce production expr -> NULL 
-- On RBRACE reduce production expr -> NULL 
-- On PROC reduce production expr -> NULL 
-- On PLUS reduce production expr -> NULL 
-- On PARALLEL reduce production expr -> NULL 
-- On OR reduce production expr -> NULL 
-- On NUM reduce production expr -> NULL 
-- On NULL reduce production expr -> NULL 
-- On MINUS reduce production expr -> NULL 
-- On MALLOC reduce production expr -> NULL 
-- On LPAREN reduce production expr -> NULL 
-- On LBRACE reduce production expr -> NULL 
-- On IS_NOT_EQUAL reduce production expr -> NULL 
-- On IS_LESS_EQUAL reduce production expr -> NULL 
-- On IS_LESS reduce production expr -> NULL 
-- On IS_GREATER_EQUAL reduce production expr -> NULL 
-- On IS_GREATER reduce production expr -> NULL 
-- On IS_EQUAL reduce production expr -> NULL 
-- On IF reduce production expr -> NULL 
-- On IDENT reduce production expr -> NULL 
-- On EOL reduce production expr -> NULL 
-- On ELSE reduce production expr -> NULL 
-- On DOT reduce production expr -> NULL 
-- On DIV reduce production expr -> NULL 
-- On ATOM reduce production expr -> NULL 
-- On AND reduce production expr -> NULL 

State 10:
expr -> MINUS . expr [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On PROC shift to state 2
-- On NUM shift to state 8
-- On NULL shift to state 9
-- On MINUS shift to state 10
-- On LPAREN shift to state 11
-- On IDENT shift to state 12
-- On expr shift to state 25

State 11:
expr -> LPAREN . expr RPAREN [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On PROC shift to state 2
-- On NUM shift to state 8
-- On NULL shift to state 9
-- On MINUS shift to state 10
-- On LPAREN shift to state 11
-- On IDENT shift to state 12
-- On expr shift to state 13

State 12:
expr -> IDENT . [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On WHILE reduce production expr -> IDENT 
-- On VAR reduce production expr -> IDENT 
-- On TIMES reduce production expr -> IDENT 
-- On SKIP reduce production expr -> IDENT 
-- On SEMICOLON reduce production expr -> IDENT 
-- On RPAREN reduce production expr -> IDENT 
-- On RBRACE reduce production expr -> IDENT 
-- On PROC reduce production expr -> IDENT 
-- On PLUS reduce production expr -> IDENT 
-- On PARALLEL reduce production expr -> IDENT 
-- On OR reduce production expr -> IDENT 
-- On NUM reduce production expr -> IDENT 
-- On NULL reduce production expr -> IDENT 
-- On MINUS reduce production expr -> IDENT 
-- On MALLOC reduce production expr -> IDENT 
-- On LPAREN reduce production expr -> IDENT 
-- On LBRACE reduce production expr -> IDENT 
-- On IS_NOT_EQUAL reduce production expr -> IDENT 
-- On IS_LESS_EQUAL reduce production expr -> IDENT 
-- On IS_LESS reduce production expr -> IDENT 
-- On IS_GREATER_EQUAL reduce production expr -> IDENT 
-- On IS_GREATER reduce production expr -> IDENT 
-- On IS_EQUAL reduce production expr -> IDENT 
-- On IF reduce production expr -> IDENT 
-- On IDENT reduce production expr -> IDENT 
-- On EOL reduce production expr -> IDENT 
-- On ELSE reduce production expr -> IDENT 
-- On DOT reduce production expr -> IDENT 
-- On DIV reduce production expr -> IDENT 
-- On ATOM reduce production expr -> IDENT 
-- On AND reduce production expr -> IDENT 

State 13:
expr -> expr . PLUS expr [ TIMES RPAREN PLUS MINUS DOT DIV ]
expr -> expr . MINUS expr [ TIMES RPAREN PLUS MINUS DOT DIV ]
expr -> expr . TIMES expr [ TIMES RPAREN PLUS MINUS DOT DIV ]
expr -> expr . DIV expr [ TIMES RPAREN PLUS MINUS DOT DIV ]
expr -> LPAREN expr . RPAREN [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
expr -> expr . DOT IDENT [ TIMES RPAREN PLUS MINUS DOT DIV ]
-- On TIMES shift to state 14
-- On RPAREN shift to state 18
-- On PLUS shift to state 19
-- On MINUS shift to state 23
-- On DOT shift to state 16
-- On DIV shift to state 21

State 14:
expr -> expr TIMES . expr [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On PROC shift to state 2
-- On NUM shift to state 8
-- On NULL shift to state 9
-- On MINUS shift to state 10
-- On LPAREN shift to state 11
-- On IDENT shift to state 12
-- On expr shift to state 15

State 15:
expr -> expr . PLUS expr [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
expr -> expr . MINUS expr [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
expr -> expr . TIMES expr [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
expr -> expr TIMES expr . [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
expr -> expr . DIV expr [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
expr -> expr . DOT IDENT [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On DOT shift to state 16
-- On WHILE reduce production expr -> expr TIMES expr 
-- On VAR reduce production expr -> expr TIMES expr 
-- On TIMES reduce production expr -> expr TIMES expr 
-- On SKIP reduce production expr -> expr TIMES expr 
-- On SEMICOLON reduce production expr -> expr TIMES expr 
-- On RPAREN reduce production expr -> expr TIMES expr 
-- On RBRACE reduce production expr -> expr TIMES expr 
-- On PROC reduce production expr -> expr TIMES expr 
-- On PLUS reduce production expr -> expr TIMES expr 
-- On PARALLEL reduce production expr -> expr TIMES expr 
-- On OR reduce production expr -> expr TIMES expr 
-- On NUM reduce production expr -> expr TIMES expr 
-- On NULL reduce production expr -> expr TIMES expr 
-- On MINUS reduce production expr -> expr TIMES expr 
-- On MALLOC reduce production expr -> expr TIMES expr 
-- On LPAREN reduce production expr -> expr TIMES expr 
-- On LBRACE reduce production expr -> expr TIMES expr 
-- On IS_NOT_EQUAL reduce production expr -> expr TIMES expr 
-- On IS_LESS_EQUAL reduce production expr -> expr TIMES expr 
-- On IS_LESS reduce production expr -> expr TIMES expr 
-- On IS_GREATER_EQUAL reduce production expr -> expr TIMES expr 
-- On IS_GREATER reduce production expr -> expr TIMES expr 
-- On IS_EQUAL reduce production expr -> expr TIMES expr 
-- On IF reduce production expr -> expr TIMES expr 
-- On IDENT reduce production expr -> expr TIMES expr 
-- On EOL reduce production expr -> expr TIMES expr 
-- On ELSE reduce production expr -> expr TIMES expr 
-- On DOT reduce production expr -> expr TIMES expr 
-- On DIV reduce production expr -> expr TIMES expr 
-- On ATOM reduce production expr -> expr TIMES expr 
-- On AND reduce production expr -> expr TIMES expr 
** Conflict on DOT

State 16:
expr -> expr DOT . IDENT [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On IDENT shift to state 17

State 17:
expr -> expr DOT IDENT . [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On WHILE reduce production expr -> expr DOT IDENT 
-- On VAR reduce production expr -> expr DOT IDENT 
-- On TIMES reduce production expr -> expr DOT IDENT 
-- On SKIP reduce production expr -> expr DOT IDENT 
-- On SEMICOLON reduce production expr -> expr DOT IDENT 
-- On RPAREN reduce production expr -> expr DOT IDENT 
-- On RBRACE reduce production expr -> expr DOT IDENT 
-- On PROC reduce production expr -> expr DOT IDENT 
-- On PLUS reduce production expr -> expr DOT IDENT 
-- On PARALLEL reduce production expr -> expr DOT IDENT 
-- On OR reduce production expr -> expr DOT IDENT 
-- On NUM reduce production expr -> expr DOT IDENT 
-- On NULL reduce production expr -> expr DOT IDENT 
-- On MINUS reduce production expr -> expr DOT IDENT 
-- On MALLOC reduce production expr -> expr DOT IDENT 
-- On LPAREN reduce production expr -> expr DOT IDENT 
-- On LBRACE reduce production expr -> expr DOT IDENT 
-- On IS_NOT_EQUAL reduce production expr -> expr DOT IDENT 
-- On IS_LESS_EQUAL reduce production expr -> expr DOT IDENT 
-- On IS_LESS reduce production expr -> expr DOT IDENT 
-- On IS_GREATER_EQUAL reduce production expr -> expr DOT IDENT 
-- On IS_GREATER reduce production expr -> expr DOT IDENT 
-- On IS_EQUAL reduce production expr -> expr DOT IDENT 
-- On IF reduce production expr -> expr DOT IDENT 
-- On IDENT reduce production expr -> expr DOT IDENT 
-- On EOL reduce production expr -> expr DOT IDENT 
-- On ELSE reduce production expr -> expr DOT IDENT 
-- On DOT reduce production expr -> expr DOT IDENT 
-- On DIV reduce production expr -> expr DOT IDENT 
-- On ATOM reduce production expr -> expr DOT IDENT 
-- On AND reduce production expr -> expr DOT IDENT 

State 18:
expr -> LPAREN expr RPAREN . [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On WHILE reduce production expr -> LPAREN expr RPAREN 
-- On VAR reduce production expr -> LPAREN expr RPAREN 
-- On TIMES reduce production expr -> LPAREN expr RPAREN 
-- On SKIP reduce production expr -> LPAREN expr RPAREN 
-- On SEMICOLON reduce production expr -> LPAREN expr RPAREN 
-- On RPAREN reduce production expr -> LPAREN expr RPAREN 
-- On RBRACE reduce production expr -> LPAREN expr RPAREN 
-- On PROC reduce production expr -> LPAREN expr RPAREN 
-- On PLUS reduce production expr -> LPAREN expr RPAREN 
-- On PARALLEL reduce production expr -> LPAREN expr RPAREN 
-- On OR reduce production expr -> LPAREN expr RPAREN 
-- On NUM reduce production expr -> LPAREN expr RPAREN 
-- On NULL reduce production expr -> LPAREN expr RPAREN 
-- On MINUS reduce production expr -> LPAREN expr RPAREN 
-- On MALLOC reduce production expr -> LPAREN expr RPAREN 
-- On LPAREN reduce production expr -> LPAREN expr RPAREN 
-- On LBRACE reduce production expr -> LPAREN expr RPAREN 
-- On IS_NOT_EQUAL reduce production expr -> LPAREN expr RPAREN 
-- On IS_LESS_EQUAL reduce production expr -> LPAREN expr RPAREN 
-- On IS_LESS reduce production expr -> LPAREN expr RPAREN 
-- On IS_GREATER_EQUAL reduce production expr -> LPAREN expr RPAREN 
-- On IS_GREATER reduce production expr -> LPAREN expr RPAREN 
-- On IS_EQUAL reduce production expr -> LPAREN expr RPAREN 
-- On IF reduce production expr -> LPAREN expr RPAREN 
-- On IDENT reduce production expr -> LPAREN expr RPAREN 
-- On EOL reduce production expr -> LPAREN expr RPAREN 
-- On ELSE reduce production expr -> LPAREN expr RPAREN 
-- On DOT reduce production expr -> LPAREN expr RPAREN 
-- On DIV reduce production expr -> LPAREN expr RPAREN 
-- On ATOM reduce production expr -> LPAREN expr RPAREN 
-- On AND reduce production expr -> LPAREN expr RPAREN 

State 19:
expr -> expr PLUS . expr [ WHILE VAR TIMES SKIP SEMICOLON RPAREN RBRACE PROC PLUS PARALLEL OR NUM NULL MINUS MALLOC LPAREN LBRACE IS_NOT_EQUAL IS_LESS_EQUAL IS_LESS IS_GREATER_EQUAL IS_GREATER IS_EQUAL IF IDENT EOL ELSE DOT DIV ATOM AND ]
-- On PROC shift to state 2
-- On NUM shift to state 8
-- On NULL shift to state 9
-- On MINUS shift to state 10
-- On LPAREN shift to state 11
-- On IDENT shift to state 12
-- On expr shift to state 20
